tests/machine/x/cobol/len_string.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. LEN_STRING.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 TMP PIC 9 VALUE 0.
       PROCEDURE DIVISION.
       PERFORM LEN USING "mochi"
       DISPLAY LEN_RES
       STOP RUN.
